# CommonLibFNV

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Types.hpp
include/Bethesda/: AchievementInstance.hpp  ActiveEffect.hpp  Actor.hpp  ActorCause.hpp  ActorPackage.hpp  ActorValue.hpp  ActorValueInfo.hpp  ActorValueOwner.hpp  BGSAmmoForm.hpp  BGSBipedModelList.hpp  BGSBodyPart.hpp  BGSClipRoundsForm.hpp  BGSDebris.hpp  BGSDebrisData.hpp  BGSDestructibleObjectForm.hpp  BGSDistantObjectBlock.hpp  BGSDistantObjectBlockLoadTask.hpp  BGSDistantTreeBlock.hpp  BGSDistantTreeBlockLoadTask.hpp  BGSEncounterZone.hpp  BGSEquipType.hpp  BGSExplosion.hpp  BGSImpactData.hpp  BGSImpactDataSet.hpp  BGSLightingTemplate.hpp  BGSListForm.hpp  BGSMessageIcon.hpp  BGSMusicType.hpp  BGSPickupPutdownSounds.hpp  BGSPlaceableWater.hpp  BGSPlaceableWaterData.hpp  BGSPreloadable.hpp  BGSProjectile.hpp  BGSProjectileData.hpp  BGSQuestObjective.hpp  BGSRepairItemList.hpp  BGSTerrainChunk.hpp  BGSTerrainChunkLoadTask.hpp  BGSTerrainManager.hpp  BGSTerrainNode.hpp  (+218 more)
include/Gamebryo/: Constants.hpp  Ni2DBuffer.hpp  NiAVObject.hpp  NiAccumulator.hpp  NiAdditionalGeometryData.hpp  NiAlphaAccumulator.hpp  NiAlphaProperty.hpp  NiAnimationKey.hpp  NiBackToFrontAccumulator.hpp  NiBinaryStream.hpp  NiBound.hpp  NiCamera.hpp  NiCollisionObject.hpp  NiColor.hpp  NiColorA.hpp  NiColorData.hpp  NiColorInterpolator.hpp  NiColorKey.hpp  NiCriticalSection.hpp  NiCullingProcess.hpp  NiDepthStencilBuffer.hpp  NiDynamicEffect.hpp  NiExtraData.hpp  NiFile.hpp  NiFixedString.hpp  (+81 more)
(+77 files in other folders)
